# bloomdb

./: .gitignore  Cargo.toml  README.md  TODOS.md
api/: Cargo.toml
api/src/: brewers.rs  lib.rs  recipes.rs  roasts.rs  server.rs  users.rs
entity/: Cargo.toml
entity/src/: brewer.rs  mod.rs  prelude.rs  recipe.rs  roast.rs  tag.rs  tag_recipe.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240918_162751_create_users.rs  m20240918_164031_create_roasts.rs  m20240918_164352_create_brewers.rs  m20240918_170443_create_tags.rs  m20240918_170716_create_recipes.rs  m20240918_182205_create_tags_recipes.rs  m20240929_184147_alter_recipe_user.rs
src/: main.rs
