[package]
name = "bloom-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros", "query", "default"] }
tokio = { version = "1.40.0", features = ["full"] }
tower = { version = "0.5.1", features = ["timeout"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tower-cookies = "0.10.0"
dotenvy = "0.15.7"
anyhow = "1.0.89"
serde = "1.0.210"
serde_json = "1.0.128"
sea-orm = { version = "1.0.1", features = ["runtime-tokio-rustls", "sqlx-postgres", "with-chrono"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"

entity = { path = "../entity" }
migration = { path = "../migration" }

